// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search Index Content API fetchAuthors should return a list of authors 1: [body] 1`] = `
Object {
  "authors": Array [
    Object {
      "id": Any<String>,
      "name": "Joe Bloggs",
      "profile_image": "https://example.com/super_photo.jpg",
      "slug": "joe-bloggs",
      "url": "http://127.0.0.1:2369/author/joe-bloggs/",
    },
    Object {
      "id": Any<String>,
      "name": "Ghost",
      "profile_image": "https://static.ghost.org/v4.0.0/images/ghost-user.png",
      "slug": "ghost",
      "url": "http://127.0.0.1:2369/author/ghost/",
    },
  ],
}
`;

exports[`Search Index Content API fetchAuthors should return a list of authors 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": "347",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Search Index Content API fetchPosts should return a list of posts 1: [body] 1`] = `
Object {
  "posts": Array [
    Object {
      "excerpt": "We've crammed the most important information to help you get started with Ghost into this one post. It's your cheat-sheet to get started, and your shortcut to advanced features.",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "welcome",
      "title": "Start here for a quick overview of everything you need to know",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/welcome/",
      "visibility": "public",
    },
    Object {
      "excerpt": "How to tweak a few settings in Ghost to transform your site from a generic template to a custom brand with style and personality.",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "design",
      "title": "Customizing your brand and design settings",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/design/",
      "visibility": "public",
    },
    Object {
      "excerpt": "A full overview of all the features built into the Ghost editor, including powerful workflow automations to speed up your creative process.",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "write",
      "title": "Writing and managing content in Ghost, an advanced guide",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/write/",
      "visibility": "public",
    },
    Object {
      "excerpt": "How Ghost allows you to turn anonymous readers into an audience of active subscribers, so you know what's working and what isn't.",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "portal",
      "title": "Building your audience with subscriber signups",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/portal/",
      "visibility": "public",
    },
    Object {
      "excerpt": "",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "sell",
      "title": "Selling premium memberships with recurring revenue",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/sell/",
      "visibility": "paid",
    },
    Object {
      "excerpt": "A guide to collaborating with other staff users to publish, and some resources to help you with the next steps of growing your business",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "grow",
      "title": "How to grow your business around an audience",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/grow/",
      "visibility": "public",
    },
    Object {
      "excerpt": "Work with all your favorite apps and tools or create your own custom integrations using the Ghost API.",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "integrations",
      "title": "Setting up apps and custom integrations",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/integrations/",
      "visibility": "public",
    },
    Object {
      "excerpt": " * Lorem
 * Aliquam
 * Tortor
 * Morbi
 * Praesent
 * Pellentesque

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo.

1234abcdefghijkl

Definition listConsectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim venia",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "not-so-short-bit-complex",
      "title": "Not so short, bit complex",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/not-so-short-bit-complex/",
      "visibility": "public",
    },
    Object {
      "excerpt": "testing


mctesters


 * test
 * line
 * items
",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "short-and-sweet",
      "title": "Short and Sweet",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/short-and-sweet/",
      "visibility": "public",
    },
    Object {
      "excerpt": "HTML Ipsum Presents

Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros ipsum rutrum o",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "ghostly-kitchen-sink",
      "title": "Ghostly Kitchen Sink",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/ghostly-kitchen-sink/",
      "visibility": "public",
    },
    Object {
      "excerpt": "This is my custom excerpt!",
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "slug": "html-ipsum",
      "title": "HTML Ipsum",
      "updated_at": StringMatching /\\\\d\\{4\\}-\\\\d\\{2\\}-\\\\d\\{2\\}T\\\\d\\{2\\}:\\\\d\\{2\\}:\\\\d\\{2\\}\\\\\\.000\\\\\\+\\\\d\\{2\\}:\\\\d\\{2\\}/,
      "url": "http://127.0.0.1:2369/html-ipsum/",
      "visibility": "public",
    },
  ],
}
`;

exports[`Search Index Content API fetchPosts should return a list of posts 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": "4387",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Search Index Content API fetchTags does not return internal tags 1: [body] 1`] = `
Object {
  "tags": Array [
    Object {
      "id": Any<String>,
      "name": Any<String>,
      "slug": Any<String>,
      "url": Any<String>,
    },
    Object {
      "id": Any<String>,
      "name": Any<String>,
      "slug": Any<String>,
      "url": Any<String>,
    },
    Object {
      "id": Any<String>,
      "name": Any<String>,
      "slug": Any<String>,
      "url": Any<String>,
    },
    Object {
      "id": Any<String>,
      "name": Any<String>,
      "slug": Any<String>,
      "url": Any<String>,
    },
    Object {
      "id": Any<String>,
      "name": Any<String>,
      "slug": Any<String>,
      "url": Any<String>,
    },
    Object {
      "id": Any<String>,
      "name": Any<String>,
      "slug": Any<String>,
      "url": Any<String>,
    },
  ],
}
`;

exports[`Search Index Content API fetchTags does not return internal tags 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": "693",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;

exports[`Search Index Content API fetchTags should return a list of tags 1: [body] 1`] = `
Object {
  "tags": Array [
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "injection",
      "slug": "injection",
      "url": "http://127.0.0.1:2369/404/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "pollo",
      "slug": "pollo",
      "url": "http://127.0.0.1:2369/404/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "chorizo",
      "slug": "chorizo",
      "url": "http://127.0.0.1:2369/tag/chorizo/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "bacon",
      "slug": "bacon",
      "url": "http://127.0.0.1:2369/tag/bacon/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "kitchen sink",
      "slug": "kitchen-sink",
      "url": "http://127.0.0.1:2369/tag/kitchen-sink/",
    },
    Object {
      "id": StringMatching /\\[a-f0-9\\]\\{24\\}/,
      "name": "Getting Started",
      "slug": "getting-started",
      "url": "http://127.0.0.1:2369/tag/getting-started/",
    },
  ],
}
`;

exports[`Search Index Content API fetchTags should return a list of tags 2: [headers] 1`] = `
Object {
  "access-control-allow-origin": "*",
  "cache-control": "public, max-age=0",
  "content-length": "693",
  "content-type": "application/json; charset=utf-8",
  "content-version": StringMatching /v\\\\d\\+\\\\\\.\\\\d\\+/,
  "etag": StringMatching /\\(\\?:W\\\\/\\)\\?"\\(\\?:\\[ !#-\\\\x7E\\\\x80-\\\\xFF\\]\\*\\|\\\\r\\\\n\\[\\\\t \\]\\|\\\\\\\\\\.\\)\\*"/,
  "vary": "Accept-Version, Accept-Encoding",
  "x-powered-by": "Express",
}
`;
